--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "requirejs": "~2.1.10",
     "requirejs-text": "~2.0.10",
     "modernizr": "~2.7.1",
-    "foundation": "~5.2.2"
+    "foundation": "~5.2.2",
+    "react": "~0.10.0"
   },
   "devDependencies": {}
 }
