--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "time-grunt": "~0.2.8",
     "jshint-stylish": "~0.1.5",
     "grunt-contrib-compass": "^0.7.2",
-    "grunt-react": "^0.8.2"
+    "react-tools": "^0.10.0",
+    "grunt-shell": "^0.7.0"
   },
   "engines": {
     "node": ">=0.10.0"
